--- a/apps/web/src/index.css
+++ b/apps/web/src/index.css
@@ -2,19 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
-/* Comfortaa Font Family */
-@font-face {
-  font-family: 'Comfortaa';
-  src: url('./assets/fonts/Comfortaa-Light.ttf') format('truetype');
-  font-weight: 300;
-  font-style: normal;
-}
-
+/* Optimized Comfortaa Font Family */
 @font-face {
   font-family: 'Comfortaa';
   src: url('./assets/fonts/Comfortaa-Regular.ttf') format('truetype');
   font-weight: 400;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -22,6 +16,7 @@
   src: url('./assets/fonts/Comfortaa-Medium.ttf') format('truetype');
   font-weight: 500;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -29,6 +24,7 @@
   src: url('./assets/fonts/Comfortaa-SemiBold.ttf') format('truetype');
   font-weight: 600;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -36,6 +32,7 @@
   src: url('./assets/fonts/Comfortaa-Bold.ttf') format('truetype');
   font-weight: 700;
   font-style: normal;
+  font-display: swap;
 }
 
 /* Modern Tech Color Variables */
